--- a/vkCommunity/vkTest1/index.html
+++ b/vkCommunity/vkTest1/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Name vk test</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script data-main="javascripts/viewBootstrap" src="javascripts/require.js"></script>
 </head>
 <body>
-    <h1>Can you see me?</h1>
+    <div class="bordered">
+        <h1>Can you see me?</h1>
+        <div ng-controller="jVKRequestController as vkRequest" ng-show="vkRequest.visible">
+            <input ng-model="vkRequest.searchString" type="text" class="form-control" placeholder="Search">
+        </div>
+    </div>
 </body>
 </html>
