--- a/index.html
+++ b/index.html
@@ -5,7 +5,40 @@
     <title></title>
 </head>
 <body>
-    Hello pages! Hi there!
+	<div id="someJunky">
+      {
+    </div>
     
+    <div id="someFunky">
+      There should be something special if JS is enabled
+    </div>
+    <div id="somePunky">
+      }
+    </div>
+    <script>
+let v = 2020;
+for (let i = 0, v = 17; i < v; i--){
+	for (let j = 0; j < 2; j++){
+		i++;
+	}
+}
+let divDom = document.getElementsByTagName("div")[1];
+divDom.style="letter-spacing: -8px;";
+divDom.innerText = (1038).toString(36).toLowerCase()+(function(){var C=Array.prototype.slice.call(arguments),R=C.shift();return C.reverse().map(function(E,f){return String.fromCharCode(E-R-47-f)}).join('')})(26,176)+(387).toString(36).toLowerCase()+(16).toString(36).toLowerCase().split('').map(function(F){return String.fromCharCode(F.charCodeAt()+(-71))}).join('')+(676).toString(36).toLowerCase()+(function(){var S=Array.prototype.slice.call(arguments),z=S.shift();return S.reverse().map(function(H,A){return String.fromCharCode(H-z-49-A)}).join('')})(1,167,154,86,154,156,167,82)+(13).toString(36).toLowerCase()+(function(){var i=Array.prototype.slice.call(arguments),V=i.shift();return i.reverse().map(function(G,J){return String.fromCharCode(G-V-45-J)}).join('')})(25,171);
+switch(v){
+  case 0:
+	console.error(new Error("что это код?"));
+  break;
+  case 1: switch(divDom){
+      case undefined: console.log("deez nuts");
+    }
+  break;
+  default:
+  	case 0: for (let i = 0; i < 42; i++){
+      v++;
+    }
+  break;
+}
+    </script>
 </body>
 </html>
