--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <title></title>
 </head>
 <body>
-	<div id="someJunky">
-      {
-    </div>
-    
-    <div id="spankyHolder">
+	
+    <span id="spankyHolder">
       There should be something special if JS is enabled
-    </div>
-    <div id="somePunky">
-      }
-    </div>
+    </span>
+	<span id="somePunky">
+      4卞Ø-卞Ø ĦØßØƸ ß ĦØßØM ҐØДŸ
+    </span>
 
     <script>
 let v = 2020;
